--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.1",
-    "normalize-css": "^4.2.0"
+    "normalize-css": "^4.2.0",
+    "zepto": "^1.1.6"
   }
 }
